# capacitacion_ubpd

./: .gitignore  README.md  pyproject.toml
cuadernos/: Generación de datos.ipynb  Sesión 1 - Uso de Python.ipynb
datos/: dataset_testimonios_sinteticos.csv
