[tool.poetry]
name = "capacitación"
version = "0.1.0"
description = "Capacitación Python UBPD"
authors = ["izainea <cizaineam@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
openai = "^1.54.4"
faker = "^32.1.0"
tqdm = "^4.67.0"
nltk = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
